--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
 </head>
 
 <body>
-  <input type="text">
-  <button>send</button>
+  <div>
+    <input type="text" class="get-input" placeholder="id">
+    <button class="get-button">get</button>
+  </div>
+
+  <div>
+    <input type="text" class="name-input" placeholder="name">
+    <input type="number" class="age-input" placeholder="age">
+    <button class="create-button">create</button>
+  </div>
+
   <script src="./src/app.js"></script>
 </body>
 
